# ai_platform

./: .claudeignore  .env.example  .gitignore  DOCKER.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/auth/: deps.py  schemas.py  service.py
backend/app/core/: config.py  exception_handlers.py  exceptions.py  feature_flags.py  health.py  logging.py  middleware.py  rate_limit.py
backend/app/db/: base.py  session.py
backend/app/domain/: drawing_types.py  stages.py  validation_rules.py
backend/app/events/: bus.py
backend/app/jobs/: __init__.py  handlers.py  queue.py  worker.py
backend/app/migrations/: env.py
backend/app/notifications/: __init__.py  base.py  email_ses.py  email_smtp.py  push_fcm.py  templates.py
backend/app/pipelines/: ingestion.py  validation.py
backend/app/repositories/: chunk_repo.py  element_repo.py  pdf_repo.py  refresh_token_repo.py  standard_detail_repo.py  user_repo.py
backend/app/routers/: auth.py  embeddings.py  extraction.py  health.py  ocr.py  pdf.py  search.py  stage.py  validation.py  ws.py
backend/app/schemas/: chunk.py  extraction.py  ocr.py  pdf.py  search.py  stage.py  validation.py
backend/app/security/: jwt.py  password.py
backend/app/services/: chunking_service.py  embedding_service.py  extraction_service.py  ocr_service.py  pdf_service.py  stage_service.py  validation_service.py  vector_service.py
backend/app/storage/: base.py  (+4 more)
backend/tests/: conftest.py  test_pdf.py
(+187 files in other folders)
